syntax = "proto3";

package cart.v1;
option go_package = "./services";

service CartService {
  rpc AddItem (AddItemRequest) returns (AddItemResponse);
  rpc RemoveItem (RemoveItemRequest) returns (RemoveItemResponse);
  rpc GetCart (GetCartRequest) returns (GetCartResponse);
}

message AddItemRequest {
    string user_id = 1;
    int32 product_id = 2;
    float price = 3;
    int32 quantity = 4;
}
message AddItemResponse {
    string message = 1;
}

message RemoveItemRequest {
  string user_id = 1;
  int32 product_id = 2;
}
message RemoveItemResponse {
    string message = 1;
}

message GetCartRequest {
  string user_id = 1;
}
message GetCartResponse {
  string user_id = 1;
  repeated Item items = 2;
}
message Item {
  string product_id = 1;
  string product_name = 2;
  float price = 3;
  int32 quantity = 4;
}
